--- a/characterCustomisationScreen.html
+++ b/characterCustomisationScreen.html
@@ -31,12 +31,12 @@
         </select>
         <br>
 
-        <button onclick="send();">Go!</button>
+        <button onclick="sendCharacterCustomisation();">Go!</button>
         
         <!-- JS below -->
 
         <script>
-            function send() {
+            function sendCharacterCustomisation() {
                 
                 var playerName = document.getElementById('playerName').value;
                 var playerHairColour = document.getElementById('playerHairColour').value;
