renamed startScreen.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
             body{
                 margin: none; 
-                background-image: ; /* free to use, image source: https://unsplash.com/photos/wSEv7Nanuxc */
+                background-image: 'jungleBackdrop.jpg'; /* free to use, image source: https://unsplash.com/photos/wSEv7Nanuxc */
             }
 
         </style>
