--- a/index.html
+++ b/index.html
@@ -4,15 +4,44 @@
 
         <style>
 
+            *{
+                text-align: center;
+            }
+
             body{
                 margin: none; 
-                background-image: 'jungleBackdrop.jpg'; /* free to use, image source: https://unsplash.com/photos/wSEv7Nanuxc */
+                background-image: url('jungleBackdrop.jpg'); /* free to use, image source: https://unsplash.com/photos/wSEv7Nanuxc */
+                background-repeat: no-repeat;
+                background-size: 100%;
             }
+
+            #title {
+                color: black;
+                font-size: 2em;
+                text-align: center;
+                background-color: white;
+                border: 3px solid black;
+
+            }
+
+
 
         </style>
 
     </head>
     <body>
+
+        <div id="title">
+            <h1>Jungle Mania</h1>
+        </div>
+
+        <p>A long time ago, in a jungle far, far way...</p>
+
+        <p>More text descriptions.......</p>
+
+        <a href="characterCustomisationScreen.html">Start Game</a>
+
+
         
     </body>
 </html>
