Fixed font size adjustment

--- a/skeleton.html
+++ b/skeleton.html
@@ -329,7 +329,7 @@
         }
 
         function applyAccessibilityOptions() {
-            gameContent.style.fontSize = `\${textSizeInput.value}px`;
+            gameContent.style.fontSize = textSizeInput.value + "px";
             gameContent.style.color = textColorInput.value;
             gameContent.style.backgroundColor = backgroundColorInput.value;
             gameContent.style.fontFamily = fontSelect.value;
