Prevented html from loading in 'quirks' mode, fixed associated resizing issue.

--- a/skeleton.html
+++ b/skeleton.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -9,10 +10,10 @@
         }
 
         #wrapper {
-            width: 90%;
-            height: 80%;
+            width: 90vw;
+            height: 80vw;
             margin: auto;
-            margin-top: 5%;
+            margin-top: 5vw;
             border: 5px solid black;
             border-radius: 7px;
             display: grid;
