create logic to navigate storyline

--- a/characterCustomisationScreen.html
+++ b/characterCustomisationScreen.html
@@ -100,6 +100,7 @@
                 sessionStorage.setItem('playerHairColour', playerHairColour);
                 sessionStorage.setItem('playerHeight', playerHeight);
                 sessionStorage.setItem('difficulty', difficulty);
+                sessionStorage.setItem('sceneID','start');
                 
                 window.open('mainGameScreen.html','_self');
                 
