--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -6,25 +6,60 @@
         <script type="text/javascript" src="storyData.js"></script>
 
         <style>
-            #wrapper {
-                margin: auto;
+            body {
+                min-height: 100vh;
+                display: flex;
+                gap: 10px;
+                background: pink;
+                margin: 0;
+
+                flex-direction: column;
+                align-items: stretch;
+
             }
 
             #topBanner {
                 background-color: gray;
-                height: 25px;
-                width: 110%;
-                margin: 0px;
-                padding: 3px;
-                position: fixed;
-                top: 0;
-                left: 0;
             }
 
-            .test {
-                margin: 50px;
-                padding: 20px;
-                border: solid black 5px;
+            #gameWrapper{
+                display: flex;
+                gap: 10px;
+                align-items: stretch;
+                flex-wrap: wrap;
+                flex-grow: 1;
+            }
+
+            #leftCol{
+                display: flex;
+                flex-direction: column;
+                flex: 6;
+                background-color: aquamarine;
+            }
+
+            #rightCol{
+                display: flex;
+                flex-direction: column;
+                flex: 4;
+                background-color: aliceblue;
+            }
+
+            #imageBox {
+                flex-grow: 1;
+                background-color: moccasin;
+            }
+            #imageBox > img {
+                width: 100%;
+            }
+
+            #descriptionBox{
+                background-color: salmon;
+                flex-grow: 1;
+            }
+
+            #promptBox {
+                background-color:palegreen;
+                min-height: 200px; 
             }
 
             .popup {
@@ -131,7 +166,7 @@
             <button onclick="reset()">reset</button>
         </div>
 
-        <div id="wrapper">
+        <div id="gameWrapper">
 
             <div id="leftCol">
 
@@ -334,7 +369,7 @@
                     document.getElementById('timeLeft').innerHTML = 'Time Up';
                     //add method here to be taken to end screen with indication that time ran out.
                     sessionStorage.setItem('ranOutOfTime',true);
-                    sessionStorage.setItem("sceneID","ranOut");
+                    sessionStorage.setItem("sceneID","ranOutOfTime");
                     setUpScene();
 
                 }
