--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -275,7 +275,9 @@
                     <button id="close-accessibility-panel">Close</button>
                 </div>
             </div>
-
+            
+            <button id="startMusicButton">Start Music</button>
+            <audio id="backgroundMusic" src="/jungle-sunrise-meditation-110556.mp3" preload="auto" loop></audio>
         </div>
 
         <div id="gameWrapper" class="text">
@@ -516,13 +518,14 @@
             }
 
             function decreaseTime() {
-                if (timeLeft>0) {
+                if (timeLeft > 0) {
                     timeLeft--;
                     displayTime();
                     displayTimeBar();
                 } else {
                     clearInterval(timer);
                     document.getElementById('timeLeft').innerHTML = 'Time Up';
+                   
                     //add method here to be taken to end screen with indication that time ran out.
                     sessionStorage.setItem('ranOutOfTime',true);
                     sessionStorage.setItem("sceneID","ranOutOfTime");
@@ -569,7 +572,11 @@
                 }
                 return myList[index];
             }
-
+            document.getElementById('startMusicButton').addEventListener('click', playBackgroundMusic);
+            function playBackgroundMusic() {
+                const backgroundMusic = document.getElementById('backgroundMusic');
+                backgroundMusic.play();
+            }
         </script>
 
     </body>
