--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -19,6 +19,11 @@
                 user-select: none;
             }
 
+            p[id^="sceneText"] {
+                overflow: scroll;
+                height: 100px;
+            }
+
             #wrapper {
                 margin: auto;
                 background-color: white;
@@ -27,7 +32,7 @@
             #topBanner {
                 background-color: gray;
                 height: 25px;
-                width: 110%;
+                width: 100%;
                 margin: 0px;
                 padding: 3px;
                 position: fixed;
