--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -277,7 +277,7 @@
             </div>
             
             <button id="startMusicButton">Start Music</button>
-            <audio id="backgroundMusic" src="/jungle-sunrise-meditation-110556.mp3" preload="auto" loop></audio>
+            <audio id="backgroundMusic" src="Chee Zee Jungle.mp3" preload="auto" loop></audio>
         </div>
 
         <div id="gameWrapper" class="text">
@@ -572,6 +572,7 @@
                 }
                 return myList[index];
             }
+
             document.getElementById('startMusicButton').addEventListener('click', playBackgroundMusic);
             function playBackgroundMusic() {
                 const backgroundMusic = document.getElementById('backgroundMusic');
