Adjusted timer difficulty values

--- a/characterCustomisationScreen.html
+++ b/characterCustomisationScreen.html
@@ -76,9 +76,9 @@
             <label for="difficulty">Skill Level (Difficulty): </label>
             <!-- difficutly can be: tourist (easy), explorer (medium) and jungle warrior (hard) -->
             <select id="difficulty">
-                <option value="easy">Tourist</option>
-                <option value="medium">Explorer</option>
-                <option value="hard">Jungle Warrior</option>
+                <option value="normal">Tourist</option>
+                <option value="hard">Explorer</option>
+                <option value="vhard">Jungle Warrior</option>
             </select>
             <br>
 
