--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -261,6 +261,7 @@
                 }
                 else {
                     setElementsOnPage(sceneDict);
+                    checkEndOfStoryLine();
                 }
             }
 
@@ -358,6 +359,16 @@
                     choiceDiv.appendChild(choiceText);
                     promptBox.appendChild(choiceDiv);
                 });
+            }
+
+            function checkEndOfStoryLine() {
+                //switch statement to check if a story line end has been reached
+                //then setting it so it's known it's been reached for the stats
+                completionDict = JSON.parse(sessionStorage.getItem('completionDict'));
+                console.log(completionDict);
+
+
+                
             }
 
             // timer logic
