temporary fix for image size

--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -165,6 +165,11 @@
                 border-radius: 5px;
                 z-index: 1001;
             }
+            
+            #imageBox img{
+                max-width: 50%;
+                max-height: 50%;
+            }
         </style>
     </head>
     <body>
