fix for overstretched images

--- a/mainGameScreen.html
+++ b/mainGameScreen.html
@@ -167,8 +167,8 @@
             }
             
             #imageBox img{
-                max-width: 50%;
-                max-height: 50%;
+                height: 30em;
+                object-fit:contain;
             }
         </style>
     </head>
