--- a/characterCustomisationScreen.html
+++ b/characterCustomisationScreen.html
@@ -5,6 +5,18 @@
         <script type="text/javascript" src="storyData.js"></script>
 
         <style>
+            
+            @font-face{
+                font-family: PathwayExtreme;
+                src: url('fonts/PathwayExtreme.ttf');
+                /*source:  https://fonts.google.com/specimen/Pathway+Extreme */
+            }
+
+            @font-face{
+                font-family: Jungle;
+                src: url('fonts/Jungle.ttf');
+            /*source:  https://fonts.google.com/specimen/Caesar+Dressing?preview.text=Jungle%20Mania&preview.text_type=custom&category=Display */
+            }
 
             *{
                 text-align: center;
@@ -14,26 +26,66 @@
                 margin: none; 
                 background-image: url('jungleBackdrop.jpg'); /* free to use, image source: https://unsplash.com/photos/wSEv7Nanuxc */
                 background-repeat: no-repeat;
-                background-size: 100%;
+                background-size: cover;
             }
 
             #title {
                 color: black;
-                font-size: 2em;
-                text-align: center;
+                font-size: 3em;
                 background-color: white;
                 border: 3px solid black;
-                padding: 20px, 50px;
-                width: 100%;
-                max-width: 500px;
+                padding: 30px;
+                width: 50%;
                 margin: auto;
-                overflow: auto;
-
+                font-family: 'Jungle';
+                overflow-wrap: break-word;
+                width: fit-content;
+                border-radius: 10px;
+                background-color: rgba(255, 255, 255, 0.6);
             }
 
             #customisationField {
                 background-color: white;
                 padding: 30px;
+                width: 50%;
+                margin: auto;
+                margin-top: 20px;
+                border: 3px solid black;
+                background-color: rgba(255, 255, 255, 0.6);
+                font-family: PathwayExtreme;
+                border-radius: 10px;
+            }
+            
+            h1{
+                margin: 0px;
+            }
+
+
+            select, input, button{
+                box-shadow: 5px 5px 20px #000;
+                padding: 0.5em 0.5em;
+                background-color: #4a5060;
+                color: #eee;
+                border: 1px solid black;
+                border-radius: 5px;
+            }
+
+            label{
+                display: inline-block;
+                margin-bottom: 30px;
+            }
+
+            option{
+                text-align: left;
+            }
+
+            button{
+                margin-top: 5px;
+                transition: 400ms ease-in-out;
+            }
+
+            button:hover{
+                transform: scale(1.5, 1.5);
             }
 
 
